--- a/Calculator/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/Calculator/en.lproj/MainStoryboard.storyboard
@@ -349,7 +349,7 @@
                                 <rect key="frame" x="236" y="154" width="64" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="del">
+                                <state key="normal" title="undo">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
