--- a/GraphingCalculator/GraphingCalculator/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/GraphingCalculator/GraphingCalculator/en.lproj/MainStoryboard_iPhone.storyboard
@@ -25,7 +25,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="oY3-ci-CbI">
                                 <rect key="frame" x="20" y="29" width="280" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.80000001192092896" green="1" blue="0.40000000596046448" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="DBLCDTempBlack" family="DB LCD Temp" pointSize="26"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -401,6 +401,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Zy2-nL-6Iy" kind="push" identifier="displayGraph" id="pfA-kp-kg6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -413,6 +416,35 @@
                 </viewController>
             </objects>
             <point key="canvasLocation" x="-73" y="4"/>
+        </scene>
+        <!--Graphing View Controller-->
+        <scene sceneID="ffA-Kh-ARv">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="759-L6-Ubx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Zy2-nL-6Iy" customClass="GraphingViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CL2-es-cNo" customClass="GraphingView">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="8AI-x3-Rnb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="I1M-wO-fLy"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="8AI-x3-Rnb" id="15C-tu-iK6"/>
+                        <outlet property="view" destination="CL2-es-cNo" id="exH-Q1-mWG"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="302" y="4"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3IH-lg-fq0">
@@ -436,6 +468,15 @@
             <relationships>
                 <relationship kind="outlet" name="display" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="headsUpDisplay" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GraphingView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphingView.h"/>
+        </class>
+        <class className="GraphingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descriptionLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
     </classes>
